// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshot: full generated output > autoInvalidate: true — auto-invalidation wiring 1`] = `
"// This file is auto-generated by @codewithagents/openapi-react-query — do not edit

import { useQuery, type UseQueryOptions, useMutation, type UseMutationOptions, useQueryClient } from '@tanstack/react-query'
import { createTask, deleteTask, getTask, listTasks, updateTask, type ApiError } from './client.js'

// ── Query key factories ──────────────────────────────────────

export const taskKeys = {
  all: () => ['tasks'] as const,
  list: (params?: Parameters<typeof listTasks>[0]) => ['tasks', 'list', params] as const,
  detail: (id: string) => ['tasks', id] as const,
}

// ── Queries ──────────────────────────────────────────────────

export function useListTasks(
  params?: Parameters<typeof listTasks>[0],
  options?: Omit<UseQueryOptions<Awaited<ReturnType<typeof listTasks>>, ApiError>, 'queryKey' | 'queryFn'>,
) {
  return useQuery<Awaited<ReturnType<typeof listTasks>>, ApiError>({
    queryKey: taskKeys.list(params),
    queryFn: () => listTasks(params),
    staleTime: 0,
    gcTime: 300000,
    ...options,
  })
}

export function useGetTask(
  id: string | undefined | null,
  options?: Omit<UseQueryOptions<Awaited<ReturnType<typeof getTask>>, ApiError>, 'queryKey' | 'queryFn'>,
) {
  return useQuery<Awaited<ReturnType<typeof getTask>>, ApiError>({
    queryKey: taskKeys.detail(id!),
    queryFn: () => getTask(id!),
    staleTime: 0,
    gcTime: 300000,
    enabled: id != null && (options?.enabled ?? true),
    ...options,
  })
}

// ── Mutations ────────────────────────────────────────────────

export function useCreateTask(
  options?: Omit<UseMutationOptions<Awaited<ReturnType<typeof createTask>>, ApiError, Parameters<typeof createTask>[0]>, 'mutationFn'>,
) {
  const queryClient = useQueryClient()
  return useMutation<Awaited<ReturnType<typeof createTask>>, ApiError, Parameters<typeof createTask>[0]>({
    mutationFn: (vars) => createTask(vars),
    onSuccess: (...args) => {
      queryClient.invalidateQueries({ queryKey: taskKeys.all() })
      options?.onSuccess?.(...args)
    },
    ...options,
  })
}

export function useUpdateTask(
  options?: Omit<UseMutationOptions<Awaited<ReturnType<typeof updateTask>>, ApiError, { id: string; body: Parameters<typeof updateTask>[1] }>, 'mutationFn'>,
) {
  const queryClient = useQueryClient()
  return useMutation<Awaited<ReturnType<typeof updateTask>>, ApiError, { id: string; body: Parameters<typeof updateTask>[1] }>({
    mutationFn: ({ id, body }) => updateTask(id, body),
    onSuccess: (...args) => {
      const [, variables] = args
      queryClient.invalidateQueries({ queryKey: taskKeys.all() })
      queryClient.invalidateQueries({ queryKey: taskKeys.detail(variables.id) })
      options?.onSuccess?.(...args)
    },
    ...options,
  })
}

export function useDeleteTask(
  options?: Omit<UseMutationOptions<Awaited<ReturnType<typeof deleteTask>>, ApiError, string>, 'mutationFn'>,
) {
  const queryClient = useQueryClient()
  return useMutation<Awaited<ReturnType<typeof deleteTask>>, ApiError, string>({
    mutationFn: (id) => deleteTask(id),
    onSuccess: (...args) => {
      queryClient.invalidateQueries({ queryKey: taskKeys.all() })
      options?.onSuccess?.(...args)
    },
    ...options,
  })
}
"
`;

exports[`snapshot: full generated output > autoInvalidate: true, suspense: true, overrides: { tasks: { staleTime: 60_000 } } — all features combined 1`] = `
"// This file is auto-generated by @codewithagents/openapi-react-query — do not edit

import { useQuery, type UseQueryOptions, useSuspenseQuery, type UseSuspenseQueryOptions, useMutation, type UseMutationOptions, useQueryClient } from '@tanstack/react-query'
import { createTask, deleteTask, getTask, listTasks, updateTask, type ApiError } from './client.js'

// ── Query key factories ──────────────────────────────────────

export const taskKeys = {
  all: () => ['tasks'] as const,
  list: (params?: Parameters<typeof listTasks>[0]) => ['tasks', 'list', params] as const,
  detail: (id: string) => ['tasks', id] as const,
}

// ── Queries ──────────────────────────────────────────────────

export function useListTasks(
  params?: Parameters<typeof listTasks>[0],
  options?: Omit<UseQueryOptions<Awaited<ReturnType<typeof listTasks>>, ApiError>, 'queryKey' | 'queryFn'>,
) {
  return useQuery<Awaited<ReturnType<typeof listTasks>>, ApiError>({
    queryKey: taskKeys.list(params),
    queryFn: () => listTasks(params),
    staleTime: 60000,
    gcTime: 300000,
    ...options,
  })
}

export function useSuspenseListTasks(
  params?: Parameters<typeof listTasks>[0],
  options?: Omit<UseSuspenseQueryOptions<Awaited<ReturnType<typeof listTasks>>, ApiError>, 'queryKey' | 'queryFn'>,
) {
  return useSuspenseQuery<Awaited<ReturnType<typeof listTasks>>, ApiError>({
    queryKey: taskKeys.list(params),
    queryFn: () => listTasks(params),
    staleTime: 60000,
    gcTime: 300000,
    ...options,
  })
}

export function useGetTask(
  id: string | undefined | null,
  options?: Omit<UseQueryOptions<Awaited<ReturnType<typeof getTask>>, ApiError>, 'queryKey' | 'queryFn'>,
) {
  return useQuery<Awaited<ReturnType<typeof getTask>>, ApiError>({
    queryKey: taskKeys.detail(id!),
    queryFn: () => getTask(id!),
    staleTime: 60000,
    gcTime: 300000,
    enabled: id != null && (options?.enabled ?? true),
    ...options,
  })
}

export function useSuspenseGetTask(
  id: string,
  options?: Omit<UseSuspenseQueryOptions<Awaited<ReturnType<typeof getTask>>, ApiError>, 'queryKey' | 'queryFn'>,
) {
  return useSuspenseQuery<Awaited<ReturnType<typeof getTask>>, ApiError>({
    queryKey: taskKeys.detail(id),
    queryFn: () => getTask(id),
    staleTime: 60000,
    gcTime: 300000,
    ...options,
  })
}

// ── Mutations ────────────────────────────────────────────────

export function useCreateTask(
  options?: Omit<UseMutationOptions<Awaited<ReturnType<typeof createTask>>, ApiError, Parameters<typeof createTask>[0]>, 'mutationFn'>,
) {
  const queryClient = useQueryClient()
  return useMutation<Awaited<ReturnType<typeof createTask>>, ApiError, Parameters<typeof createTask>[0]>({
    mutationFn: (vars) => createTask(vars),
    onSuccess: (...args) => {
      queryClient.invalidateQueries({ queryKey: taskKeys.all() })
      options?.onSuccess?.(...args)
    },
    ...options,
  })
}

export function useUpdateTask(
  options?: Omit<UseMutationOptions<Awaited<ReturnType<typeof updateTask>>, ApiError, { id: string; body: Parameters<typeof updateTask>[1] }>, 'mutationFn'>,
) {
  const queryClient = useQueryClient()
  return useMutation<Awaited<ReturnType<typeof updateTask>>, ApiError, { id: string; body: Parameters<typeof updateTask>[1] }>({
    mutationFn: ({ id, body }) => updateTask(id, body),
    onSuccess: (...args) => {
      const [, variables] = args
      queryClient.invalidateQueries({ queryKey: taskKeys.all() })
      queryClient.invalidateQueries({ queryKey: taskKeys.detail(variables.id) })
      options?.onSuccess?.(...args)
    },
    ...options,
  })
}

export function useDeleteTask(
  options?: Omit<UseMutationOptions<Awaited<ReturnType<typeof deleteTask>>, ApiError, string>, 'mutationFn'>,
) {
  const queryClient = useQueryClient()
  return useMutation<Awaited<ReturnType<typeof deleteTask>>, ApiError, string>({
    mutationFn: (id) => deleteTask(id),
    onSuccess: (...args) => {
      queryClient.invalidateQueries({ queryKey: taskKeys.all() })
      options?.onSuccess?.(...args)
    },
    ...options,
  })
}
"
`;

exports[`snapshot: full generated output > default options (staleTime: 0, gcTime: 300_000) — baseline 1`] = `
"// This file is auto-generated by @codewithagents/openapi-react-query — do not edit

import { useQuery, type UseQueryOptions, useMutation, type UseMutationOptions } from '@tanstack/react-query'
import { createTask, deleteTask, getTask, listTasks, updateTask, type ApiError } from './client.js'

// ── Query key factories ──────────────────────────────────────

export const taskKeys = {
  all: () => ['tasks'] as const,
  list: (params?: Parameters<typeof listTasks>[0]) => ['tasks', 'list', params] as const,
  detail: (id: string) => ['tasks', id] as const,
}

// ── Queries ──────────────────────────────────────────────────

export function useListTasks(
  params?: Parameters<typeof listTasks>[0],
  options?: Omit<UseQueryOptions<Awaited<ReturnType<typeof listTasks>>, ApiError>, 'queryKey' | 'queryFn'>,
) {
  return useQuery<Awaited<ReturnType<typeof listTasks>>, ApiError>({
    queryKey: taskKeys.list(params),
    queryFn: () => listTasks(params),
    staleTime: 0,
    gcTime: 300000,
    ...options,
  })
}

export function useGetTask(
  id: string | undefined | null,
  options?: Omit<UseQueryOptions<Awaited<ReturnType<typeof getTask>>, ApiError>, 'queryKey' | 'queryFn'>,
) {
  return useQuery<Awaited<ReturnType<typeof getTask>>, ApiError>({
    queryKey: taskKeys.detail(id!),
    queryFn: () => getTask(id!),
    staleTime: 0,
    gcTime: 300000,
    enabled: id != null && (options?.enabled ?? true),
    ...options,
  })
}

// ── Mutations ────────────────────────────────────────────────

export function useCreateTask(
  options?: Omit<UseMutationOptions<Awaited<ReturnType<typeof createTask>>, ApiError, Parameters<typeof createTask>[0]>, 'mutationFn'>,
) {
  return useMutation<Awaited<ReturnType<typeof createTask>>, ApiError, Parameters<typeof createTask>[0]>({
    mutationFn: (vars) => createTask(vars),
    ...options,
  })
}

export function useUpdateTask(
  options?: Omit<UseMutationOptions<Awaited<ReturnType<typeof updateTask>>, ApiError, { id: string; body: Parameters<typeof updateTask>[1] }>, 'mutationFn'>,
) {
  return useMutation<Awaited<ReturnType<typeof updateTask>>, ApiError, { id: string; body: Parameters<typeof updateTask>[1] }>({
    mutationFn: ({ id, body }) => updateTask(id, body),
    ...options,
  })
}

export function useDeleteTask(
  options?: Omit<UseMutationOptions<Awaited<ReturnType<typeof deleteTask>>, ApiError, string>, 'mutationFn'>,
) {
  return useMutation<Awaited<ReturnType<typeof deleteTask>>, ApiError, string>({
    mutationFn: (id) => deleteTask(id),
    ...options,
  })
}
"
`;

exports[`snapshot: full generated output > overrides: { tasks: { staleTime: 60_000, gcTime: 600_000 } } — per-resource timing 1`] = `
"// This file is auto-generated by @codewithagents/openapi-react-query — do not edit

import { useQuery, type UseQueryOptions, useMutation, type UseMutationOptions } from '@tanstack/react-query'
import { createTask, deleteTask, getTask, listTasks, updateTask, type ApiError } from './client.js'

// ── Query key factories ──────────────────────────────────────

export const taskKeys = {
  all: () => ['tasks'] as const,
  list: (params?: Parameters<typeof listTasks>[0]) => ['tasks', 'list', params] as const,
  detail: (id: string) => ['tasks', id] as const,
}

// ── Queries ──────────────────────────────────────────────────

export function useListTasks(
  params?: Parameters<typeof listTasks>[0],
  options?: Omit<UseQueryOptions<Awaited<ReturnType<typeof listTasks>>, ApiError>, 'queryKey' | 'queryFn'>,
) {
  return useQuery<Awaited<ReturnType<typeof listTasks>>, ApiError>({
    queryKey: taskKeys.list(params),
    queryFn: () => listTasks(params),
    staleTime: 60000,
    gcTime: 600000,
    ...options,
  })
}

export function useGetTask(
  id: string | undefined | null,
  options?: Omit<UseQueryOptions<Awaited<ReturnType<typeof getTask>>, ApiError>, 'queryKey' | 'queryFn'>,
) {
  return useQuery<Awaited<ReturnType<typeof getTask>>, ApiError>({
    queryKey: taskKeys.detail(id!),
    queryFn: () => getTask(id!),
    staleTime: 60000,
    gcTime: 600000,
    enabled: id != null && (options?.enabled ?? true),
    ...options,
  })
}

// ── Mutations ────────────────────────────────────────────────

export function useCreateTask(
  options?: Omit<UseMutationOptions<Awaited<ReturnType<typeof createTask>>, ApiError, Parameters<typeof createTask>[0]>, 'mutationFn'>,
) {
  return useMutation<Awaited<ReturnType<typeof createTask>>, ApiError, Parameters<typeof createTask>[0]>({
    mutationFn: (vars) => createTask(vars),
    ...options,
  })
}

export function useUpdateTask(
  options?: Omit<UseMutationOptions<Awaited<ReturnType<typeof updateTask>>, ApiError, { id: string; body: Parameters<typeof updateTask>[1] }>, 'mutationFn'>,
) {
  return useMutation<Awaited<ReturnType<typeof updateTask>>, ApiError, { id: string; body: Parameters<typeof updateTask>[1] }>({
    mutationFn: ({ id, body }) => updateTask(id, body),
    ...options,
  })
}

export function useDeleteTask(
  options?: Omit<UseMutationOptions<Awaited<ReturnType<typeof deleteTask>>, ApiError, string>, 'mutationFn'>,
) {
  return useMutation<Awaited<ReturnType<typeof deleteTask>>, ApiError, string>({
    mutationFn: (id) => deleteTask(id),
    ...options,
  })
}
"
`;

exports[`snapshot: full generated output > suspense: true — suspense hook variants 1`] = `
"// This file is auto-generated by @codewithagents/openapi-react-query — do not edit

import { useQuery, type UseQueryOptions, useSuspenseQuery, type UseSuspenseQueryOptions, useMutation, type UseMutationOptions } from '@tanstack/react-query'
import { createTask, deleteTask, getTask, listTasks, updateTask, type ApiError } from './client.js'

// ── Query key factories ──────────────────────────────────────

export const taskKeys = {
  all: () => ['tasks'] as const,
  list: (params?: Parameters<typeof listTasks>[0]) => ['tasks', 'list', params] as const,
  detail: (id: string) => ['tasks', id] as const,
}

// ── Queries ──────────────────────────────────────────────────

export function useListTasks(
  params?: Parameters<typeof listTasks>[0],
  options?: Omit<UseQueryOptions<Awaited<ReturnType<typeof listTasks>>, ApiError>, 'queryKey' | 'queryFn'>,
) {
  return useQuery<Awaited<ReturnType<typeof listTasks>>, ApiError>({
    queryKey: taskKeys.list(params),
    queryFn: () => listTasks(params),
    staleTime: 0,
    gcTime: 300000,
    ...options,
  })
}

export function useSuspenseListTasks(
  params?: Parameters<typeof listTasks>[0],
  options?: Omit<UseSuspenseQueryOptions<Awaited<ReturnType<typeof listTasks>>, ApiError>, 'queryKey' | 'queryFn'>,
) {
  return useSuspenseQuery<Awaited<ReturnType<typeof listTasks>>, ApiError>({
    queryKey: taskKeys.list(params),
    queryFn: () => listTasks(params),
    staleTime: 0,
    gcTime: 300000,
    ...options,
  })
}

export function useGetTask(
  id: string | undefined | null,
  options?: Omit<UseQueryOptions<Awaited<ReturnType<typeof getTask>>, ApiError>, 'queryKey' | 'queryFn'>,
) {
  return useQuery<Awaited<ReturnType<typeof getTask>>, ApiError>({
    queryKey: taskKeys.detail(id!),
    queryFn: () => getTask(id!),
    staleTime: 0,
    gcTime: 300000,
    enabled: id != null && (options?.enabled ?? true),
    ...options,
  })
}

export function useSuspenseGetTask(
  id: string,
  options?: Omit<UseSuspenseQueryOptions<Awaited<ReturnType<typeof getTask>>, ApiError>, 'queryKey' | 'queryFn'>,
) {
  return useSuspenseQuery<Awaited<ReturnType<typeof getTask>>, ApiError>({
    queryKey: taskKeys.detail(id),
    queryFn: () => getTask(id),
    staleTime: 0,
    gcTime: 300000,
    ...options,
  })
}

// ── Mutations ────────────────────────────────────────────────

export function useCreateTask(
  options?: Omit<UseMutationOptions<Awaited<ReturnType<typeof createTask>>, ApiError, Parameters<typeof createTask>[0]>, 'mutationFn'>,
) {
  return useMutation<Awaited<ReturnType<typeof createTask>>, ApiError, Parameters<typeof createTask>[0]>({
    mutationFn: (vars) => createTask(vars),
    ...options,
  })
}

export function useUpdateTask(
  options?: Omit<UseMutationOptions<Awaited<ReturnType<typeof updateTask>>, ApiError, { id: string; body: Parameters<typeof updateTask>[1] }>, 'mutationFn'>,
) {
  return useMutation<Awaited<ReturnType<typeof updateTask>>, ApiError, { id: string; body: Parameters<typeof updateTask>[1] }>({
    mutationFn: ({ id, body }) => updateTask(id, body),
    ...options,
  })
}

export function useDeleteTask(
  options?: Omit<UseMutationOptions<Awaited<ReturnType<typeof deleteTask>>, ApiError, string>, 'mutationFn'>,
) {
  return useMutation<Awaited<ReturnType<typeof deleteTask>>, ApiError, string>({
    mutationFn: (id) => deleteTask(id),
    ...options,
  })
}
"
`;
